--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 
 jdk: openjdk11
 
+script:
+   - ./mvnw clean install sonar:sonar -Dsonar.projectKey=mgiannoni_CI-CD-Training_mgiannoni
+
 before_install:
    - openssl aes-256-cbc -K $encrypted_477022ec06e2_key -iv $encrypted_477022ec06e2_iv -in CI-CD-Training_rsa.enc -out CI-CD-Training_rsa -d
    - chmod +x mvnw
@@ -13,7 +16,7 @@ before_install:
 deploy:
    - provider: script 
      skip-cleanup: true
-     script: rsync -r --quiet --delete-after ${TRAVIS_BUILD_DIR}/target/cicd-example-*.jar ${DEPLOY_USER}@${DEPLOY_HOST:${DEPLOY_DIRECTORY}
+     script: rsync -r --quiet --delete-after ${TRAVIS_BUILD_DIR}/target/cicd-example-*.jar ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_DIRECTORY}
      on:
         branch: master
    - provider: script
@@ -21,9 +24,6 @@ deploy:
      script: sh ${TRAVIS_BUILD_DIR}/remote_deploy.sh
      on:
        branch: master
-
-script:
-   - "./mvnw clean install sonar:sonar -Dsonar.projectKey=mgiannoni_CI-CD-Training_mgiannoni"
 
 notifications:
   email:
